--- a/ETourisme/app/src/main/res/values/strings.xml
+++ b/ETourisme/app/src/main/res/values/strings.xml
@@ -25,7 +25,11 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_home">Accueil</string>
+    <string name="menu_list_site">Liste des sites</string>
+    <string name="menu_settings">Paramètres</string>
+    <string name="bienvenue_dans_e_tourisme">Bienvenue dans E-Tourisme</string>
+    <string name="bonne_visite">Bonne visite</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
