--- a/ETourisme/app/src/main/res/values/strings.xml
+++ b/ETourisme/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="logout">Déconnexion</string>
+    <string name="menu_galerie">Galerie</string>
 </resources>
